# llms

./: .gitignore  CITATION.cff  DESIGN-sm-partitioning.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
experiments/stage_a/: e2e_summary.md  profile_summary.md
experiments/stage_a/draft_1_7b/: e2e_summary.md
experiments/stage_a/eager_sweep_0_6b/: e2e_summary.md
experiments/stage_a/eager_sweep_1_7b/: e2e_summary.md
experiments/stage_a/eager_sweep_low_K_0_6b/: e2e_summary.md
experiments/stage_a/eager_sweep_low_K_1_7b/: e2e_summary.md
experiments/stage_a/with_qkv/: profile_summary.md
experiments/stage_b/: eval_control.py  eval_healed.py  eval_summary_healed.md  eval_summary_partial_rope.md  eval_summary_partial_rope_v2.md  eval_summary_v_only.md  run_calib.py  run_control_ft.py  run_heal_overnight.sh  sweep.py
src/bench/: _e2e_prompts.py  _make_e2e_prompts.py  demo.py  e2e.py  eval_ppl.py  microbench_fused_ffn.py  microbench_fused_qkv.py  profile.py
src/engine/: attention.py  kv_cache.py  mla.py  model.py  sampler.py  spec_decode.py  weights.py
src/kernels/: __init__.py  _autotune.py  fused_ffn.py  fused_qkv.py  swap.py
src/mla/: __init__.py  calibrate.py  convert.py  heal.py  svd.py  swap.py
tests/: _tiny.py  conftest.py  test_attention_hook.py  test_correctness.py  test_e2e_smoke.py  test_eval_ppl.py  test_kernels_fused_ffn.py  test_kernels_fused_qkv.py  test_mla_attention.py  test_mla_calibrate.py  test_mla_convert.py  test_mla_e2e_smoke.py  test_mla_heal.py  test_mla_svd.py  test_sampler.py  test_spec_decode.py
(+5 files in other folders)
