[project]
name = "specd"
version = "0.1.0"
description = "Single-GPU sequential speculative decoding engine (Stage A)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.5",
    "transformers>=4.45",
    "safetensors>=0.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
gpu = ["triton>=3.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine", "src/kernels", "src/bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
